# geo-contains

./: Cargo.toml  README.md
data/: tokyo.geojson
data/test/: tokyo_square.geojson
src/: error.rs  geojson_utils.rs  lib.rs  main.rs  spatial_index.rs
