[package]
name = "geo-contains"
version = "0.1.0"
edition = "2021"
description = "GeoJSONポリゴン内に緯度経度が含まれるかを判定するツール"
authors = ["Devin AI"]

[dependencies]
geo = "0.30.0"
geojson = "0.24.2"
h3o = { version = "0.5.1", features = ["geo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
thiserror = "1.0"
